force-app/main/default/objects/SIOC__RequestLog__c/SIOC__RequestLog__c.object-meta.xml
<CustomObject>
    <description>Used to store business lookup search requests</description>
    <label>Request Log</label>
    <nameField>
        <displayFormat>RL-{0000000000}</displayFormat>
        <label>Request Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>