force-app/main/default/objects/SIOC__RequestLog__c/fields/SIOC__Account__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The system automatically populates this mandatory field with the account for which the business lookup request was made.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Request Logs</relationshipLabel>
    <relationshipName>RequestLogs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>