force-app/main/default/objects/SIOC__RequestLog__c/fields/SIOC__Description__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Description__c</fullName>
    <description>The system automatically populates this optional field with the request description.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>