force-app/main/default/objects/SIOC__RequestLog__c/fields/SIOC__IsSuccessful__c.field-meta.xml
<CustomField>
    <fullName>SIOC__IsSuccessful__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically populates this optional field to indicate if the transaction was successful.</description>
    <label>Is Successful</label>
    <type>Checkbox</type>
</CustomField>