force-app/main/default/objects/SIOC__RequestLog__c/fields/SIOC__nCinoProcessingPackage__c.field-meta.xml
<CustomField>
    <fullName>SIOC__nCinoProcessingPackage__c</fullName>
    <description>The system automatically populates this mandatory field with the nCino Processing Package.</description>
    <label>nCino Processing Package</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>