force-app/main/default/objects/SIOC__RequestLog__c/fields/SIOC__Provider__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Provider__c</fullName>
    <description>The system automatically populates this mandatory field with the provider used to perform the request.</description>
    <label>Provider</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>