force-app/main/default/objects/SIOC__RequestLog__c/fields/SIOC__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Timestamp__c</fullName>
    <description>The system automatically populates this mandatory field with the time the business lookup request was sent.</description>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>